Fix T94050, T94570, T94527: Cycles Bevel and AO nodes not working with Metal

Workaround what may be a compiler bug, solution found by Michael Jones.